--- a/packages/custom/ddb/public/views/group.html
+++ b/packages/custom/ddb/public/views/group.html
@@ -14,7 +14,7 @@
             <div class="bounce3"></div>
         </div>
 
-        <div class="row" ng-show="group">
+        <div class="row">
             <div class="col-md-9">
 
                 <div class="row">
