--- a/packages/custom/ddb/public/views/profile.html
+++ b/packages/custom/ddb/public/views/profile.html
@@ -13,7 +13,7 @@
             <div class="bounce3"></div>
         </div>
 
-        <div class="row" ng-show="profile">
+        <div class="row">
             <div class="col-md-6">
                 <div class="panel panel-danger">
                     <div class="panel-heading">
