--- a/packages/custom/ddb/public/assets/css/beerkeeper.css
+++ b/packages/custom/ddb/public/assets/css/beerkeeper.css
@@ -109,6 +109,11 @@ tr.active {
     color: #FFF0E6 !important;
 }
 
+.jumbotron h1 {
+    color: #FF6700;
+    font-size: 20pt;
+}
+
 .jumbotron-gradient a {
     text-decoration: underline;
 }
@@ -173,4 +178,68 @@ tr.active {
 
 .pager .disabled {
     display: none
+}
+
+.social_icon {
+    width: 100%;
+    height: 60px;
+    border: 1px solid #000;
+    border-radius: 5px;
+    margin-bottom: 10px;
+    list-style-type: none;
+    vertical-align: middle;
+    display: inline-block;
+    margin-top: 20px;
+}
+
+.social_icon:hover {
+    border: 1px solid #FF7400;
+    background-color: #FF7400;
+    color: #000;
+}
+
+.social_icon .button {
+    display: block;
+    text-decoration: none;
+    padding: 22px 0 22px 60px;
+    line-height: 1;
+    position: relative;
+    color: #fff;
+}
+
+.social_icon .button:active {
+    color: #959595;
+}
+
+.social_icon .button span {
+    font-weight: bold;
+}
+
+.social_icon_facebook .button:before {
+    content: '';
+    position: absolute;
+    background: url("../img/social_fb.png") no-repeat 50% 50%;
+    width: 41px;
+    height: 40px;
+    top: 10px;
+    left: 8px;
+}
+
+.step-circle {
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    text-align: center;
+    padding-top: 5px;
+    background-color: black;
+    display: inline-block;
+    font-size: 20pt;
+    position: relative;
+    left: -40px;
+    top: -40px;
+    border: 1px solid #ff6700;
+}
+
+.panel-appear {
+    margin-bottom: 100px
 }
