--- a/packages/custom/ddb/public/views/home.html
+++ b/packages/custom/ddb/public/views/home.html
@@ -1,17 +1,17 @@
 <div data-ng-controller="DdbHomeController">
     <div class="jumbotron jumbotron-gradient" data-ng-controller="LoginCtrl as login">
-        <section class="container" style="background-color: transparent">
+        <section class="container" style="background-color: transparent; min-height: 300px">
 
             <div clas="row">
                 <div class="col-md-6 hidden-xs">
                     <object type="image/svg+xml" data="ddb/assets/img/logo.svg" style="width: 30vw"/>
+
+                    <h1>The Social Drinking Network</h1>
+
+                    <button class="btn btn-lg btn-warning" ui-sref='auth.register' style="margin-top: 20px">Join Now
+                    </button>
                 </div>
                 <div class="col-md-4 col-md-offset-2">
-                    <div class="alert alert-danger animated fadeIn" ng-show="login.loginError">
-                        {{login.loginError}}
-                    </div>
-                    <h2>Login</h2>
-
                     <form id="login_form" ng-submit="login.login()">
                         <div class="form-group">
                             <label for="email_block">E-mail address</label>
@@ -27,14 +27,22 @@
 
                         <div class="row">
                             <div class="col-md-12">
+                                <div class="alert alert-danger" ng-show="login.loginError">
+                                    {{login.loginError}}
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-md-12">
                                 <button type="submit" class="btn btn-warning">Login</button>
                             </div>
                         </div>
-                        <div class="row">
-                            <div class="col-md-12">
-                                <p>Not registered yet? <a ui-sref='auth.register'>Sign up now</a>
-                                </p>
-                            </div>
+
+                        <div class="social_icon social_icon_facebook">
+                            <a target="_self" ng-href="/api/auth/facebook" class="button">
+                                <span>Log In With Facebook</span>
+                            </a>
                         </div>
                     </form>
                 </div>
@@ -42,7 +50,99 @@
         </section>
     </div>
 
-    <div style="height: 100vh">
+    <div class="container" style="background-color: transparent;">
+
+        <div class="page-header" style="margin-bottom: 50px">
+            <h1>
+                <small>How does it work?</small>
+            </h1>
+        </div>
+
+        <div class="panel panel-primary panel-appear">
+            <div class="panel-body">
+                <span class="step-circle">1</span>
+
+                <div class="row" style="position: relative; top: -30px; left: 30px">
+                    <div class="col-md-6 text-center">
+                        <h4>Track your drinks</h4>
+
+                        <p>
+                            Keep track of the beers your drink, using our extensive catalog of beverages. We even
+                            include some wine and liquor varieties!
+                        </p>
+                    </div>
+                    <div class="col-md-6 center-block">
+                        <img class="img-rounded" src="ddb/assets/img/demo/track.png" style="max-width: 80%">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="panel panel-primary panel-appear">
+            <div class="panel-body">
+                <span class="step-circle">2</span>
+
+                <div class="row" style="position: relative; top: -30px; left: 30px">
+                    <div class="col-md-6 text-center">
+                        <h4>Examine your statistics</h4>
+
+                        <p>
+                            How much alcohol are you drinking exactly? What are your favorite drinks? Which days
+                            are you drinking the most? Observe long-term trends...
+                        </p>
+
+                    </div>
+                    <div class="col-md-6 center-block">
+                        <img class="img-rounded" src="ddb/assets/img/demo/statistics2.png" style="max-width: 80%">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="panel panel-primary panel-appear">
+            <div class="panel-body">
+                <span class="step-circle">3</span>
+
+                <div class="row" style="position: relative; top: -30px; left: 30px">
+                    <div class="col-md-6 text-center">
+                        <h4>Share with friends</h4>
+
+                        <p>
+                            Share your data with friends. Rate and recommend beers. Challenge each other to fun drinking
+                            games!
+                        </p>
+                    </div>
+                    <div class="col-md-6 center-block">
+                        <img class="img-rounded" src="ddb/assets/img/demo/friends.png" style="max-width: 80%">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="panel panel-warning panel-appear">
+            <div class="panel-heading">
+                <div class="row">
+                    <div class="col-md-6 text-center">
+                        <h4><a ui-sref='auth.register' style="color: #FFF0E6">
+                            Join us now!</a>
+                        </h4>
+
+                        <p>
+                            <a ui-sref='auth.register' style="color: #FFF0E6">
+                                It only takes a few seconds</a>
+                        </p>
+                    </div>
+                    <div class="col-md-6 center-block">
+
+                        <div class="social_icon social_icon_facebook">
+                            <a target="_self" ng-href="/api/auth/facebook" class="button">
+                                <span>Skip Registration: Log In With Facebook</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </div>
 
