--- a/packages/custom/ddb/public/views/measurements.html
+++ b/packages/custom/ddb/public/views/measurements.html
@@ -18,7 +18,7 @@
                         </button>
                     </div>
                     <div class="col-xs-4 text-center">
-                        <h3 style="margin: 5px 0px 0px 0px">{{date | date:'EEE dd/MM/yy'}}</h3>
+                        <h3 style="margin: 5px 0px 0px 0px">{{date | date:'EEE dd/MM/yy':'UTC'}}</h3>
                     </div>
                     <div class="col-xs-4 text-right">
                         <button type="button" class="btn btn-primary dropdown-toggle"
