--- a/packages/custom/ddb/public/views/dashboard.html
+++ b/packages/custom/ddb/public/views/dashboard.html
@@ -7,11 +7,11 @@
             </h1>
         </div>
 
-        <div class="well">
+       <!-- <div class="well">
             <p>
                 <strong>New:</strong> Track your wines, using more than thousand AOC and grape varieties in our database!  <em>#winekeeper</em>
             </p>
-        </div>
+        </div>-->
 
         <div class="panel panel-primary" id="track-more">
             <div class="panel-heading">
