Unaggregate css file

--- a/packages/core/system/server/views/includes/head.html
+++ b/packages/core/system/server/views/includes/head.html
@@ -39,6 +39,7 @@
     <meta name="theme-color" content="#ffffff">
 
     <link rel="stylesheet" href="/ddb/assets/css/bootstrap.css">
+    <link rel="stylesheet" href="/ddb/assets/css/beerkeeper.css">
 
     <script type="text/javascript">
         window.mobilecheck = function () {
