--- a/packages/custom/ddb/public/views/measurements.html
+++ b/packages/custom/ddb/public/views/measurements.html
@@ -30,7 +30,7 @@
                 </div>
                 <div class="row visible-xs">
                     <div class="col-xs-12 text-center">
-                        <h5 style="margin: 0px 0px 0px 10px">{{date | date:'EEE dd/MM/yy'}}</h5>
+                        <h5 style="margin: 0px 0px 0px 10px">{{date | date:'EEE dd/MM/yy':'UTC'}}</h5>
                     </div>
                 </div>
                 <div class="row visible-xs">
@@ -100,7 +100,7 @@
             <div class="panel-body">
                 <button type="button" class="btn btn-primary btn-block dropdown-toggle"
                         ng-click="trackMore = true; scrollTo('track-more')">
-                    Track another drink for {{date | date:'dd/MM/yy'}}
+                    Track another drink for {{date | date:'dd/MM/yy':'UTC'}}
                 </button>
             </div>
         </div>
