--- a/packages/custom/ddb/public/views/profile.html
+++ b/packages/custom/ddb/public/views/profile.html
@@ -195,6 +195,9 @@
                             <th colspan="2">Most Frequent Drinks</th>
                             <th>
                                 Count
+                                <i class="glyphicon glyphicon-info-sign pull-right"
+                                   tooltip="This table ranks the number of days on which the drinks were consumed at least once"
+                                   tooltip-placement="left"/>
                             </th>
                             </thead>
                             <tbody>
