--- a/packages/custom/ddb/public/views/drink.html
+++ b/packages/custom/ddb/public/views/drink.html
@@ -172,7 +172,7 @@
                         <table class="table table-striped">
                             <tr ng-repeat="topDrinker in topDrinkers">
                                 <td class="col-xs-8">{{topDrinker.user.name}}</td>
-                                <td class="col-xs-4">
+                                <td class="col-xs-4 text-right">
                                     {{topDrinker.totalAmount}} cl
                                 </td>
                             </tr>
